# AmxxEasyHttp

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md
.github/workflows/: build.yml  release.yml
amxx/scripting/include/: easy_http.inc  easy_http_json.inc
amxx_test/scripting/: ez_http_mapchange_test.sma  ez_http_test.sma
amxx_test/scripting/include/: utest.inc
cmake/: FindCURL.cmake  FindHLSDK.cmake  FindMetamod.cmake  FindOpenSSL.cmake  FindZLIB.cmake  Findcares.cmake  Findmetamod.cmake  Findzlib.cmake  deps.cmake
cmake/external_dep/: GTest_external.cmake  matchitcpp_external.cmake
dep/cares/include/: ares_build.h
dep/concurrencpp/example/5_prime_number_finder/source/: main.cpp
dep/concurrencpp/example/9_result_promise/source/: main.cpp
dep/concurrencpp/include/concurrencpp/threads/: binary_semaphore.h
dep/concurrencpp/source/threads/: binary_semaphore.cpp  thread.cpp
dep/cpr/cpr/: cookies.cpp
dep/cpr/include/cpr/: cookies.h
dep/curl/lib/: libcurl_a.lib  libcurl_a_debug.lib
dep/halflife/common/: winsani_in.h  winsani_out.h
dep/halflife/dlls/: extdll.h
dep/metamod/: engineinfo.cpp  metamod.cpp  osdep.h
dep/openssl/include/openssl/: opensslconf.h
dep/parson/: CMakeLists.txt
dep/parson/src/: parson.cpp
dep/zlib/lib/: zlib_a.lib
src/: AmxxEasyHttp.version  CMakeLists.txt  EasyHttpHolder.hpp  EasyHttpModule.cpp  EasyHttpModule.h  Handles.h  OptionsData.hpp  PluginEndBehaviour.h  RequestData.hpp  module.cpp  natives.cpp  undef_metamod.h  utils.cpp  utils.h
src/easy_http/: EasyHttp.cpp  EasyHttp.h  EasyHttpInterface.h  EasyHttpOptionsBuilder.cpp  EasyHttpOptionsBuilder.h  EasyHttpOptionsBuilder.hpp  RequestControl.h  RequestControl.hpp  RequestControlInterface.h  RequestMethod.h  RequestOptions.h  RequestProgress.hpp  Response.h  TaskData.hpp  UrlUtils.cpp  UrlUtils.h
src/easy_http/datetime_service/: DateTimeService.cpp  DateTimeService.h  DateTimeServiceInterface.h
src/easy_http/session_cache/: CprSessionCache.cpp  CprSessionCache.h  CurlHolderCacheItem.cpp  CurlHolderCacheItem.h  HostCacheItem.cpp  HostCacheItem.h
src/easy_http/session_factory/: CprSessionFactory.cpp  CprSessionFactory.h  CprSessionFactoryInterface.h
src/json/: IJsonMngr.h  JsonMngr.cpp  JsonMngr.h  JsonNatives.cpp  JsonNatives.h
src/sdk/: amxxmodule.cpp  amxxmodule.h  moduleconfig.h
src/utils/: ContainerWithHandles.h  ContainerWithHandles.hpp  Result.hpp  TraceLog.cpp  TraceLog.h  amxx_utils.cpp  amxx_utils.h  ftp_utils.cpp  ftp_utils.h  string_utils.cpp  string_utils.h
tests/: CMakeLists.txt  CurlHolderComparer.h  easy_http_module_tests.cpp  ftp_utils_tests.cpp  session_cache_tests.cpp
tests/mocks/: CprSessionFactoryMock.h  DateTimeServiceMock.h
